--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "@financial-times/n-gage": "^1.19.6",
-    "@financial-times/n-ui": "^8.3.7"
-  },
   "scripts": {
     "precommit": "node_modules/.bin/secret-squirrel",
     "commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
     "prepush": "make verify -j3"
+  },
+  "dependencies": {
+    "@financial-times/n-ui": "^8.3.7"
+  },
+  "devDependencies": {
+    "@financial-times/n-gage": "^1.19.6",
+    "bower": "^1.8.2"
   }
 }
