--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "prepush": "make verify -j3"
   },
   "dependencies": {
-    "@financial-times/n-ui": "^8.3.7"
+    "@financial-times/n-ui": "^8.1.4"
   },
   "devDependencies": {
     "@financial-times/n-gage": "^1.19.6",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "bower": "^1.8.2"
   }
 }
